--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "antd": "^5.1.7",
+    "echarts": "^5.4.1",
+    "echarts-for-react": "^3.0.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
